--- a/GradientGuide/gradientguide_0.02/gradientguide/routeplanner/templates/routeplanner/session_detail_old.html
+++ b/GradientGuide/gradientguide_0.02/gradientguide/routeplanner/templates/routeplanner/session_detail_old.html
@@ -1,44 +1,16 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Session Details</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Mapbox GL JS CSS -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css" rel="stylesheet">
+    <!-- Mapbox GL JS -->
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js"></script>
-    <style>#map { width: 100%; height: 400px; }</style>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <style>
+        #map { width: 100%; height: 400px; }
+    </style>
 </head>
 <body>
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">GradientGuide</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="/">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/new/">Build a Route</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/past/">Past Routes</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/profile/">User Profile</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
-<div class="container mt-4">
     <h2>Training Session Details</h2>
     <p>Duration: {{ session.duration }} minutes</p>
     <p>Power: {{ session.power }}W</p>
@@ -46,8 +18,7 @@
     <p>Estimated Distance: {{ distance }} km</p>
 
     <div id="map"></div>
-</div>
-<!-- Mapbox and other JavaScript logic here -->
+
 <script>
     mapboxgl.accessToken = 'pk.eyJ1IjoiYWRhbXdhcmRoYnUiLCJhIjoiY2x1MTZ3dmRxMGZ1aDJuczNjczVoOXMybSJ9.EN8pBBjC6P76HNPCSpnu_g';
     var map = new mapboxgl.Map({
@@ -95,5 +66,8 @@
         }
     });
 </script>
+
 </body>
 </html>
+
+
