--- a/GradientGuide/gradientguide_0.02/gradientguide/routeplanner/templates/routeplanner/home.html
+++ b/GradientGuide/gradientguide_0.02/gradientguide/routeplanner/templates/routeplanner/home.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +11,12 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <style>
+        .nav-pills .nav-link {
+            border-radius: 50px;
+            margin: 0 5px;
+        }
+    </style>
 </head>
 <body>
 
@@ -30,7 +35,7 @@
         <a class="nav-link" href="new/">Build a Route</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Past Routes</a>
+        <a class="nav-link" href="past/">Past Routes</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">User Profile</a>
@@ -41,14 +46,19 @@
 
 <!-- Main Content -->
 <div class="container mt-4">
-    <div class="jumbotron">
+    <div class="jumbotron text-center">
         <h1 class="display-4">Welcome to GradientGuide!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <p class="lead">The personal cycling route planner for your unique training needs.</p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <p>Select an option below to start your journey.</p>
+        <div class="nav nav-pills justify-content-center">
+            <a class="nav-link active" href="new/">Build a Route</a>
+            <a class="nav-link active" href="past/">Past Routes</a>
+            <a class="nav-link active" href="#">User Profile</a>
+        </div>
     </div>
 </div>
 
 </body>
 </html>
+
